--- a/hardware.html
+++ b/hardware.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Hardware - HardZone</title>
 </head>
 <body>
-    
+  <nav class="principal">   
+    <div class="logo">
+      <a href="index.html">HardZone</a>
+    </div>
+
+    <div class="search-box">
+      <input type="text" placeholder="Buscar produtos...">
+      <button>🔍</button>
+    </div>
+
+    <div class="menu">
+      <a href="index.html">Início</a>
+      <a href="hardware.html">Hardware</a>
+      <a href="monitores.html">Monitores</a>
+      <a href="perifericos.html">Periféricos</a>
+    </div>
+  </nav>
+
+  <header class="banner">
+    <h1>Hardware</h1>
+    <p>Processadores, placas de vídeo e muito mais!</p>
+  </header>
+
+  <main class="produtos">
+    <div class="card">
+      <img src="https://images.kabum.com.br/produtos/fotos/520367/processador-amd-ryzen-7-5700-3-7-ghz-4-6ghz-max-turbo-cache-4mb-8-nucleos-16-threads-am4-100-100000743box_1708024353_gg.jpg" alt="Processador">
+      <h2>Processador Ryzen 7 5700</h2>
+      <p class="preco">R$ 1.799,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://images.tcdn.com.br/img/img_prod/872390/placa_de_video_galax_nvidia_rtx_4070_12gb_gddr6_192_bits_47nom7mdabxv_1815_1_35a387324b5d0bd284295ffe62a733fe.jpg" alt="Placa de Vídeo">
+      <h2>Placa de Vídeo RTX 4070</h2>
+      <p class="preco">R$ 3.499,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://media.pichau.com.br/media/catalog/product/cache/2f958555330323e505eba7ce930bdf27/k/f/kf432c16bb1162.jpg" alt="Memória RAM">
+      <h2>Memória RAM Fury 16GB DDR4</h2>
+      <p class="preco">R$ 299,90</p>
+      <button>Comprar</button>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 HardZone - Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
