--- a/monitores.html
+++ b/monitores.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Monitores - HardZone</title>
 </head>
 <body>
-    
+  <nav class="principal">   
+    <div class="logo">
+      <a href="index.html">HardZone</a>
+    </div>
+
+    <div class="search-box">
+      <input type="text" placeholder="Buscar produtos...">
+      <button>🔍</button>
+    </div>
+
+    <div class="menu">
+      <a href="index.html">Início</a>
+      <a href="hardware.html">Hardware</a>
+      <a href="monitores.html">Monitores</a>
+      <a href="perifericos.html">Periféricos</a>
+    </div>
+  </nav>
+
+  <header class="banner">
+    <h1>Monitores</h1>
+    <p>Qualidade de imagem para produtividade e jogos!</p>
+  </header>
+
+  <main class="produtos">
+    <div class="card">
+      <img src="https://images.tcdn.com.br/img/img_prod/1157659/monitor_led_24_fhd_hdmivga_grasep_1_20250825113631_e246a9a4b763.png" alt="Monitor 24 polegadas">
+      <h2>Monitor LED 24</h2>
+      <p class="preco">R$ 849,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbWJptfz3jywfl665b_7Kh67DEyKR1LZwWXg&s" alt="Monitor Gamer 144Hz">
+      <h2>Monitor Gamer 144Hz</h2>
+      <p class="preco">R$ 1.299,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://images6.kabum.com.br/produtos/fotos/364836/monitor-gamer-lg-32-led-ultra-wide-165-hz-qhd-1ms-hdmi-displayport-99-srgb-freesync-premium-hdr-10-vesa-preto-34wp65c-b_1658780270_gg.jpg" alt="Monitor Ultrawide">
+      <h2>Monitor Ultrawide</h2>
+      <p class="preco">R$ 2.199,90</p>
+      <button>Comprar</button>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 HardZone - Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
