--- a/perifericos.html
+++ b/perifericos.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Periféricos - HardZone</title>
 </head>
 <body>
-    
+  <nav class="principal">   
+    <div class="logo">
+      <a href="index.html">HardZone</a>
+    </div>
+
+    <div class="search-box">
+      <input type="text" placeholder="Buscar produtos...">
+      <button>🔍</button>
+    </div>
+
+    <div class="menu">
+      <a href="index.html">Início</a>
+      <a href="hardware.html">Hardware</a>
+      <a href="monitores.html">Monitores</a>
+      <a href="perifericos.html">Periféricos</a>
+    </div>
+  </nav>
+
+  <header class="banner">
+    <h1>Periféricos</h1>
+    <p>Teclados, mouses e acessórios gamers!</p>
+  </header>
+
+  <main class="produtos">
+    <div class="card">
+      <img src="https://cdn.shoppub.io/cdn-cgi/image/w=1000,h=1000,q=80,f=auto/oficinadosbits/media/uploads/produtos/foto/yyzzsedj/file.png" alt="Mouse Gamer">
+      <h2>Mouse logitech sem fio</h2>
+      <p class="preco">R$ 149,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRT7v4_hBRpFke1LOCdKc_wpQk8rkIifTQiNw&s" alt="Teclado Mecânico">
+      <h2>Teclado Mecânico RGB</h2>
+      <p class="preco">R$ 399,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://www.logitechstore.com.br/media/catalog/product/cache/105e6f420716e0751863c4b81f527d17/l/o/logitech098.png" alt="Headset Gamer">
+      <h2>Headset Gamer logitech</h2>
+      <p class="preco">R$ 299,90</p>
+      <button>Comprar</button>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 HardZone - Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
