--- a/hardware.html
+++ b/hardware.html
@@ -49,6 +49,24 @@
       <p class="preco">R$ 299,90</p>
       <button>Comprar</button>
     </div>
+      <div class="card">
+    <img src="https://m.media-amazon.com/images/I/71ZnK38jZzL._UF894,1000_QL80_.jpg" alt="SSD NVMe">
+    <h2>SSD NVMe 1TB</h2>
+    <p class="preco">R$ 499,90</p>
+    <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnZGG8THYAhgTwkzHCVM45dasMpFhcDIDLUg&s" alt="Fonte Gamer">
+      <h2>Fonte 650W 80 Plus</h2>
+      <p class="preco">R$ 399,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://www.gigantec.com.br/media/catalog/product/cache/66c3fa0fb26d248d0ca40a64a387c3da/p/l/placa-mae-gigabyte-b550m-k-am4-matx-001.jpg" alt="Placa Mãe">
+      <h2>Placa Mãe B550</h2>
+      <p class="preco">R$ 899,90</p>
+      <button>Comprar</button>
+    </div>
   </main>
 
   <footer>
