--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
       <p class="preco">R$ 1.899,90</p>
       <button>Comprar</button>
     </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScDD5wnvq7e1pzioFUyKyfhDp1nbiQ47_ELQ&s" alt="Monitor Gamer">
+      <h2>Monitor Gamer 27" 144Hz</h2>
+      <p class="preco">R$ 1.499,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRdfB6RRmY_Tqx9f4tHGGI5VlmajWPCwEPog&s" alt="Mouse Gamer">
+      <h2>Mouse Gamer RGB</h2>
+      <p class="preco">R$ 149,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTLAFD1XlkhfBwwET6nQdFOnYZf4QQjU927Q&s" alt="Teclado Mecânico branco">
+      <h2>Teclado Mecânico branco RGB</h2>
+      <p class="preco">R$ 399,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrogG4fUJBoAfZsLRTkFYayxNB-rYTbhFXbw&s" alt="fone de ouvido bluetooth">
+      <h2>fone de ouvido bluetooth</h2>
+      <p class="preco">R$ 299,90</p>
+      <button>Comprar</button>
+    </div>
   </main>
 
   <footer>
