--- a/monitores.html
+++ b/monitores.html
@@ -49,6 +49,24 @@
       <p class="preco">R$ 2.199,90</p>
       <button>Comprar</button>
     </div>
+    <div class="card">
+      <img src="https://cdn.shoppub.io/cdn-cgi/image/w=1000,h=1000,q=80,f=auto/oficinadosbits/media/uploads/produtos/foto/qzjwxguf/file.png" alt="Monitor Curvo">
+      <h2>Monitor Curvo 27"</h2>
+      <p class="preco">R$ 1.599,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://fujiokadistribuidor.vteximg.com.br/arquivos/ids/383373" alt="Monitor 4K">
+      <h2>Monitor 4K UHD 28"</h2>
+      <p class="preco">R$ 2.799,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4GhC0gGvPskKmP8FzkPYRA5wZIi--CzOGVQ&s" alt="Monitor Portátil">
+      <h2>Monitor Portátil 15.6"</h2>
+      <p class="preco">R$ 1.099,90</p>
+      <button>Comprar</button>
+    </div>
   </main>
 
   <footer>
