--- a/perifericos.html
+++ b/perifericos.html
@@ -49,6 +49,25 @@
       <p class="preco">R$ 299,90</p>
       <button>Comprar</button>
     </div>
+    </div>
+        <div class="card">
+      <img src="https://m.media-amazon.com/images/I/71k6li+9vFL._UF1000,1000_QL80_.jpg" alt="Microfone">
+      <h2>Microfone Fifine</h2>
+      <p class="preco">R$ 159,99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://m.media-amazon.com/images/I/61eXN9erjAL._UF894,1000_QL80_.jpg" alt="Facecam">
+      <h2>Facecam Elgato</h2>
+      <p class="preco">R$ 1.199,90</p>
+      <button>Comprar</button>
+    </div>
+    <div class="card">
+      <img src="https://images.tcdn.com.br/img/img_prod/245284/caixa_de_som_pc_notebook_3w_rms_sp144_multilaser_10008015_1_20190718165002.jpg" alt="Caixa de som">
+      <h2>Caixa de som</h2>
+      <p class="preco">R$ 60,76</p>
+      <button>Comprar</button>
+    </div>
   </main>
 
   <footer>
