--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>HardZone - Loja de PCs</title>
+  <title>HardZone</title>
 </head>
 <body>
 
@@ -81,3 +81,4 @@
   </footer>
 </body>
 </html>
+
